map features added at show.ejs file and some errors fixed

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 CLOUD_NAME=dnrew4l4z
 CLOUD_API_KEY=333913345682667
 CLOUD_API_SECRET=QVZ5vT6emmT3pxNp7HHgeKuU2OM
+MAPTILER_API_KEY=cV2nUeAFwE6hiHI8J97D
