--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@maptiler/client": "^2.2.0",
     "cloudinary": "^2.5.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
