ready for deployment

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ CLOUD_NAME=dnrew4l4z
 CLOUD_API_KEY=333913345682667
 CLOUD_API_SECRET=QVZ5vT6emmT3pxNp7HHgeKuU2OM
 MAPTILER_API_KEY=cV2nUeAFwE6hiHI8J97D
+mongodbAtlasUrl=mongodb+srv://faiyaz-sarkar:niI6zk6Qn0UPNqIV@cluster0.cppty.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
